--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,10 @@
 // personal overrides in the User Settings area.
 
 {
-    "editor.tabSize": 2
+    "editor.tabSize": 2,
+    "eslint.enable": true,
+    "eslint.workingDirectories": [
+        { "directory": "./client", "changeProcessCWD": true },
+        { "directory": "./server", "changeProcessCWD": true }
+    ],
 }
